--- a/css/cssLayout.css
+++ b/css/cssLayout.css
@@ -1,8 +1,7 @@
 body
 {
-background-color: #eeeeee;
-	margin: 0px;
-	padding: 0px;
+margin: 0px;
+padding: 0px;
 }
 h1
 {
@@ -25,20 +24,24 @@ header
 }
 section
 {
-	width: 75%;
-	float: left;
-}
-aside
-{
-	width: 25%;
-	float: right;
-	background-color: red;
+	text-align: center;
+	background-image: url("../img/cayac.png");
+	background-repeat: no-repeat;
+	background-size: 100%;
+	background-attachment: fixed;
+	bottom: 0px;
+	padding-bottom: 50px;
+	position: fixed;
+	top: 100px;
+	left: 0px;
+	right: 0px;
 
 }
+
 footer
 {
+	
 
-	margin: 0px;
 }
 #cabecera
 {
@@ -54,30 +57,28 @@ footer
 }
 #contenedor
 {
-	background-color: yellow;
-	left: 0px;
-	right: 0px;
-}
-#Banner
-{
-	text-align: center;
-	background-color: #7A6981;
-	height: 400px;
-	line-height: 100px;
-	padding-top: 100px;
-	line-height: 400px;
-}
-#contenido
-{
-	background-color: #C9BECA;
+	
+	margin: 0px;
 }
 
 #pie
 {
-	background-color: #5F3961;
+
+	position: fixed;
+    background-color: #5F3961;
 	text-align: center;
-	height: 40px;
+	height: 50px;
 	left: 0px;
+	bottom: 0px;
 	right: 0px;
+}
+
+#yaca
+{
+	height: 30%;
+	border-radius: 350px;
+	top: 0px;
+	margin: 15px;
+	
 
 }
